--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@sentry/nextjs": "^8.31.0",
     "@tanstack/react-table": "^8.20.5",
     "@vercel/speed-insights": "^1.0.12",
     "class-variance-authority": "^0.7.0",
