--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@conform-to/react": "^1.2.2",
     "@conform-to/zod": "^1.2.2",
     "@hookform/resolvers": "^3.9.0",
-    "@kinde-oss/kinde-auth-nextjs": "^2.4.3",
-    "@prisma/client": "^5.21.1",
+    "@kinde-oss/kinde-auth-nextjs": "^2.4.6",
+    "@prisma/client": "^5.22.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -66,6 +66,7 @@
     "react-phone-number-input": "^3.4.5",
     "react-slugify": "^4.0.1",
     "sonner": "^1.5.0",
+    "stripe": "^17.3.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.1.0",
@@ -81,7 +82,7 @@
     "eslint": "^9.13.0",
     "eslint-config-next": "15.0.1",
     "postcss": "^8",
-    "prisma": "^5.21.1",
+    "prisma": "^5.22.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
