--- a/package.json
+++ b/package.json
@@ -64,12 +64,14 @@
     "node-appwrite": "^13.0.0",
     "novel": "^0.5.0",
     "react": "^18.2.0",
-    "react-datepicker": "^7.3.0",
+    "react-big-scheduler": "^0.2.7",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.53.1",
     "react-phone-number-input": "^3.4.5",
     "react-slugify": "^4.0.1",
+    "react-toastify": "^10.0.6",
     "sonner": "^1.5.0",
     "stripe": "^17.3.1",
     "swr": "^2.2.5",
